# 2D-GameEngine

./: .gitignore  CMakeLists.txt  Coding_guidelines.md  README.md  README_DISTRIBUTION.md  build_gamelogic.bat  create_distribution.bat  dist_CMakeLists.txt  distribute.ps1  game_config.ini  game_engine_evaluation_report.md  imgui.ini  simple_export.ps1
Assets/Shaders/: Opaque.frag  Opaque.vert
Distribution/: README.md  build_gamelogic.bat  config.ini  create_distribution.bat  dist_CMakeLists.txt  distribute.ps1
Documentation/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  DISTRIBUTION_GUIDE.md  DISTRIBUTION_SUCCESS.md  MAPMANAGER_INTEGRATION.md  MAPMANAGER_INTEGRATION_FIXES.md  MAPMANAGER_LINKING_FIX.md  MAPMANAGER_PRODUCTION_READY.md  MAPMANAGER_STRUCTURE.md  NAMING_CONVENTION.md  Naming_convension.md  PARTICLE_SYSTEM_GUIDE.md  README_DISTRIBUTION.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  WINDOW_CONFIGURATION.md
Editor/: EditorPanels.cpp  EditorPanels.h  GameEditor.cpp  GameEditor.h  GameEditorLayout.h  GameEditorTheme.h
Editor/imgui/: imgui_widgets.cpp
Editor/rlImGui/: rlImGui.cpp  rlImGui.h
Engine/: Button.cpp  Button.h  CoreEngine.cpp  CoreEngine.h  GameConfig.cpp  GameConfig.h  GameEngine.cpp  GameEngine.h  GameMap.cpp  GameMap.h  MapManager.cpp  MapManager.h  Water.h  background.cpp  background.h
Game/: DllLoader.cpp  DllLoader.h  GameLogic.cpp  GameLogic.h  app.aps  app.rc  game.cpp  main.cpp  main_game.cpp
GameLogic/: BloodParticle.h  Blood_fountain.h  Bubble.h  DefaultMap.cpp  DefaultMap.h  DemoLevel.cpp  DemoLevel.h  DemoMainMenu.cpp  DemoMainMenu.h  Ecid.h  FireParticle.h  GameCamera.cpp  GameLogicEntryPoint.cpp  Level1.cpp  Level1.h  Level2.cpp  Level2.h  MyMap.cpp  MyMap.h  Player.cpp  Player.h  RootManager.cpp  TestMap.cpp  TestMap.h
